Mon Dec 11 19:25:10 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Added a super-sweet patch from Benjamin Elijah Griffin
	<bgriffin@cddb.com> to actually implement the builtin http
	collection I started ages ago. I screwed with it only slightly,
	it's a great patch. So now we can grab http images without
	spawning a subprocess, and I have to say here it seems a little
	faster too ;-)
	* Added -Q, --wget option to use wget to grab http data just in
	case you need to use a proxy, or something else stops the builtin
	stuff from working...
	* Misc tidyups etc..


Tue Nov 28 00:45:38 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Added support for --slideshow-delay as a float. -D0.25 for
	example.

Sat Oct 28 23:32:11 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Better check for imlib2.
	* Only create files in current dir if keeping http images. Ones
	that will be deleted on exit go in /tmp.

Sun Oct 22 02:01:33 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Swapped the default right mouse button config. You now hold
	ctrl to pan, or don't to get menus.
	* Changed --no-menu-ctrl-mask to --menu-ctrl-mask
	* Added --no-pan-ctrl-mask
	* Use the options feh --no-pan-ctrl-mask --menu-ctrl-mask to
	simulate the old behaviour, or add that line to ~/.fehrc to keep
	it.
	* Need to change all the --*-ctrl-mask options to booleans so it
	is properly configurable, I think.

Sat Oct 21 23:22:09 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fixed the -k option (to save files viewed by http). It now saves
	the files into the *current* directory, with better filenames, eg
	feh_000001_image.jpg for a file called image.jpg.
	* Removed the use of the evil mkstemp function, not needed any
	more.

Fri Aug 25 16:41:29 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* rotation wasn't reset when image changed in fullscreen mode

Sat Aug 19 16:07:29 2000  Paul Duncan  <pabs@pablotron.org>

	* added multiple key loading to cam.  also updated the